docs(common): Added checkbox rendering changes for 4.6.0

--- a/upgrade/rendering-changes/4-6-0.md
+++ b/upgrade/rendering-changes/4-6-0.md
@@ -10,6 +10,7 @@ position: 980
 
 * [Icons](#icons)
 * [Carousel](#carousel)
+* [CheckBox](#checkbox)
 * [Filter](#filter)
 * [Form](#form)
 
@@ -53,9 +54,13 @@ The CSS classes applied to the built-in Font and SVG icons will be unified to in
 * Added the `k-scrollview-animate` CSS class to the `<div class="k-scrollview-wrap">` element.
 * Replaced the `<a class="k-scrollview-prev">` and `<a class="k-scrollview-next">` with `<span class="k-scrollview-prev">` and `<span class="k-scrollview-next">`.
 
+## CheckBox
+
+Added a `<span class="k-checkbox-wrap">` element that wraps the `<input type="checkbox" class="k-checkbox" />`.
+
 ## Filter
 
-* Removed the `k-filter-toolbar-item` CSS class from the `<div class="k-toolbar-item">` element.
+Removed the `k-filter-toolbar-item` CSS class from the `<div class="k-toolbar-item">` element.
 
 ## Form
 
