docs(common): Remove promises for the future

--- a/upgrade/breaking-changes/3-0-0.md
+++ b/upgrade/breaking-changes/3-0-0.md
@@ -486,7 +486,7 @@ public class TreeItem
     </tbody>
 </table>
 
-- **Window** - changed `Size` parameter type from `WindowSize` enum to `string`. There is a new static class `Telerik.Blazor.ThemeConstants.Window.Size` with a predefined set of size properties. The `Size` property will have effect in future UI for Blazor versions. To maintain the old behavior, set the Window `Width` to `300px`, `800px` or `1200px`.
+- **Window** - changed `Size` parameter type from `WindowSize` enum to `string`. There is a new static class `Telerik.Blazor.ThemeConstants.Window.Size` with a predefined set of size properties. To maintain the old behavior, set the Window `Width` to `300px`, `800px` or `1200px`.
 
 ## Parameter Names
 
