chore(PDFViewer): add more details in the annotation docs

--- a/upgrade/rendering-changes/3-6-0.md
+++ b/upgrade/rendering-changes/3-6-0.md
@@ -99,4 +99,4 @@ position: 995
 
 ## See also
 
-* [Use best practives when overriding theme styles]({%slug themes-override%}#best-practices)
+* [Use best practices when overriding theme styles]({%slug themes-override%}#best-practices)
