--- a/upgrade/rendering-changes/4-0-0.md
+++ b/upgrade/rendering-changes/4-0-0.md
@@ -241,4 +241,4 @@ The following changes are applicable when `AutoUpload = "false"`, so the **Clear
 
 ## See Also
 
-* [Use best practives when overriding theme styles]({%slug themes-override%}#best-practices)
+* [Use best practices when overriding theme styles]({%slug themes-override%}#best-practices)
