--- a/upgrade/rendering-changes/4-3-0.md
+++ b/upgrade/rendering-changes/4-3-0.md
@@ -128,4 +128,4 @@ Such dialogs are any edit forms, filter menus, column menus, editor's tools, as 
 
 ## See Also
 
-* [Use best practives when overriding theme styles]({%slug themes-override%}#best-practices)
+* [Use best practices when overriding theme styles]({%slug themes-override%}#best-practices)
