--- a/upgrade/rendering-changes/4-6-0.md
+++ b/upgrade/rendering-changes/4-6-0.md
@@ -72,4 +72,4 @@ Removed the `k-filter-toolbar-item` CSS class from the `<div class="k-toolbar-it
 
 ## See Also
 
-* [Use best practives when overriding theme styles]({%slug themes-override%}#best-practices)
+* [Use best practices when overriding theme styles]({%slug themes-override%}#best-practices)
