--- a/upgrade/rendering-changes/6-3-0.md
+++ b/upgrade/rendering-changes/6-3-0.md
@@ -8,8 +8,58 @@ position: 970
 
 # Rendering Changes in 6.3.0
 
+* [AIPrompt](#aiprompt)
+* [Gantt](#gantt)
+* [Menu](#menu)
 * [PDFViewer](#pdfviewer)
+* [Signature](#signature)
+* [TabStrip](#tabstrip)
+* [TreeList](#treelist)
 
-# PDFViewer
+## AIPrompt
 
-The `Open`, `Download` and `Print` tools have been moved to a separate hamburger menu on the left side of the Toolbar.
+1. The view buttons in the toolbar are now fully rounded (`k-rounded-md` class is replaced with `k-rounded-full`). The same applies to the `Generate` button.
+2. The output view, which contains the `k-card-list` element, is now wrapped in a `div` element with the class `k-prompt-view`.
+3. The copy button in the output view is now styled as primary.
+
+## Gantt
+
+1. The `k-gantt-content` class is now applied to a wrapper `div` element that encloses the Gantt Splitter.
+2. The Splitter component class (`k-splitter` element) is now changed from `k-grid-content` to `k-grid-splitter`.
+3. The `k-gantt-tables` element no longer includes the `k-user-select-none` class.
+4. The `k-gantt-rows` element now also has a `k-grid-table` class.
+5. The `k-spacer` element in the toolbar no longer has the `k-toolbar-spacer` class.
+6. The `k-gantt-views` button group / select element is now wrapped in a `div` with the `k-gantt-views-wrapper` class.
+
+## Menu
+
+1. The menu item elements (`k-link`) no longer include the `k-in` class.
+2. The `k-menu-group` elements no longer include the `k-reset` and `k-group` classes.
+
+## PDFViewer
+
+The `Open`, `Download` and `Print` tools have been moved to a submenu toggled on click of a hamburger menu on the leftmost side of the Toolbar.
+
+## Signature
+
+1. The `k-signature-action k-signature-minimize` element no longer includes the `k-rotate-180` class.
+2. When maximized, the Signature now renders the `k-signature-maximized` class.
+3. The fill mode class is now applied based on the `FillMode` parameter (appearance settings).
+
+## TabStrip
+
+1. The active (currently selected) tabs now render only the `k-active` class. The` k-tab-on-top` class is no longer applied.
+2. The inactive tabs no longer include the `k-state-default` class.
+3. The scroll buttons (prev & next) now render the `k-tabstrip-prev` and `k-tabstrip-next` classes, respectively.
+4. The `k-pos-relative` class is no longer applied to the `k-tabstrip` element. The component now receives an inline `position: relative` style instead.
+
+## TreeList
+
+1. The `k-cursor-pointer` class is removed from the `k-treelist-toggle` element (toggle row icon).
+2. The `k-table` element rendered in the `k-grid-header > k-grid-header-wrap` element now also has the `k-grid-header-table` class.
+3. The `k-grid-content > k-table element` now also includes a size class (appearance settings).
+4. The `k-filterable` class in the table header cells is now rendered only when the column is filterable and has either a filter menu or column menu.
+
+## See Also
+
+* [Use best practices when overriding theme styles]({%slug themes-override%}#best-practices)
