docs(common): Document breaking changes in version 7

--- a/upgrade/rendering-changes/3-6-0.md
+++ b/upgrade/rendering-changes/3-6-0.md
@@ -2,7 +2,7 @@
 title: 3.6.0
 description: Handle the rendering changes in the 3.6.0 release of the Telerik UI for Blazor components.
 page_title: Rendering Changes in the 3.6.0 Release 
-slug: changes-in-3-6-0
+slug: rendering-changes-in-3-6-0
 position: 995
 ---
 
