--- a/upgrade/rendering-changes/3-4-0.md
+++ b/upgrade/rendering-changes/3-4-0.md
@@ -2,7 +2,7 @@
 title: 3.4.0
 description: Handle the rendering changes in the 3.4.0 release of the Telerik UI for Blazor components.
 page_title: Rendering Changes in the 3.4.0 Release 
-slug: changes-in-3-4-0
+slug: rendering-changes-in-3-4-0
 position: 1000
 ---
 
