--- a/upgrade/rendering-changes/4-3-0.md
+++ b/upgrade/rendering-changes/4-3-0.md
@@ -2,7 +2,7 @@
 title: 4.3.0
 description: Handle the rendering changes in the 4.3.0 release of the Telerik UI for Blazor components.
 page_title: Rendering Changes in the 4.3.0 Release
-slug: changes-in-4-3-0
+slug: rendering-changes-in-4-3-0
 position: 985
 ---
 
