--- a/upgrade/rendering-changes/6-0-0.md
+++ b/upgrade/rendering-changes/6-0-0.md
@@ -2,7 +2,7 @@
 title: 6.0.0
 description: Handle the rendering changes in the 6.0.0 release of the Telerik UI for Blazor components.
 page_title: Rendering Changes in the 6.0.0 Release
-slug: changes-in-6-0-0
+slug: rendering-changes-in-6-0-0
 position: 975
 ---
 
