doc(common): Breaking changes in v7 continued

--- a/upgrade/breaking-changes/7-0-0.md
+++ b/upgrade/breaking-changes/7-0-0.md
@@ -30,6 +30,8 @@ The obsolete `ClearButton` parameter is removed. Use `ShowClearButton` instead.
 
 ## Gantt
 
+* The [`Type` property of `GanttDependencyCreateEventArgs`]({%slug gantt-dependencies-editing%}) changes from `int` to [`GanttDependencyType` enum](/blazor-ui/api/telerik.blazor.ganttdependencytype).
+* The [dependency model class of the Gantt]({%slug gantt-dependencies-databind%}) must use the `GanttDependencyType` enum for its `TypeField` property.
 
 ## Grid
 
@@ -52,3 +54,7 @@ The obsolete `ClearButton` parameter is removed. Use `ShowClearButton` instead.
 ## Upload
 
 * The obsolete method `OpenFileSelectAsync()` is removed. [Use `OpenSelectFilesDialog()`]({%slug upload-overview%}#upload-reference-and-methods) instead.
+
+## See Also
+
+* [Rendering changes in Telerik UI for Blazor 7.0.0]({%slug rendering-changes-in-7-0-0%})
