--- a/upgrade/rendering-changes/7-0-0.md
+++ b/upgrade/rendering-changes/7-0-0.md
@@ -67,3 +67,4 @@ The `Open`, `Download` and `Print` tools have been moved to a submenu toggled on
 ## See Also
 
 * [Use best practices when overriding theme styles]({%slug themes-override%}#best-practices)
+* [Breaking changes in Telerik UI for Blazor 7.0.0]({%slug changes-in-7-0-0%})
