Mention .NET 7 support

--- a/upgrade/breaking-changes/7-0-0.md
+++ b/upgrade/breaking-changes/7-0-0.md
@@ -12,6 +12,10 @@ This article outlines the breaking changes in Telerik UI for Blazor version 7.0.
 
 ## Common
 
+### .NET Support
+
+[.NET 7 is no longer supported]({%slug system-requirements%}).
+
 ### AutoComplete, ComboBox, MultiColumnComboBox, MultiSelect
 
 The obsolete `ClearButton` parameter is removed. Use `ShowClearButton` instead.
