--- a/upgrade/breaking-changes/7-0-0.md
+++ b/upgrade/breaking-changes/7-0-0.md
@@ -41,7 +41,7 @@ The obsolete `ClearButton` parameter is removed. Use `ShowClearButton` instead.
 
 * Columns with `Visible="false"` are editable by default in popup edit mode. To avoid this, [set `Editable="false"` together with `Visible="false"`]({%slug components/grid/editing/popup%}).
 * The obsolete `AutoFitColumn()` method is removed. [Use `AutoFitColumnAsync()`]({%slug components/grid/columns/resize%}#autofit-columns) instead.
-* The obsolete `AutoFitColumns()` method is removed. Use `AutoFitColumsAsync()` instead.
+* The obsolete `AutoFitColumns()` method is removed. Use `AutoFitColumnsAsync()` instead.
 * The obsolete `AutoFitAllColumns()` method is removed. Use `AutoFitAllColumnsAsync()` instead.
 
 ## TextArea
