--- a/upgrade/breaking-changes/7-0-0.md
+++ b/upgrade/breaking-changes/7-0-0.md
@@ -39,7 +39,7 @@ The obsolete `ClearButton` parameter is removed. Use `ShowClearButton` instead.
 
 ## Grid
 
-* Columns with `Visible="false"` are editable by default in popup edit mode. To avoid this, [set `Editable="false"` together with `Visible="false"`]({%slug components/grid/editing/popup%}).
+* Columns with `Visible="false"` are editable by default in popup edit mode. To disable editing of a hidden column, [set `Editable="false"` together with `Visible="false"`]({%slug components/grid/editing/popup%}).
 * The obsolete `AutoFitColumn()` method is removed. [Use `AutoFitColumnAsync()`]({%slug components/grid/columns/resize%}#autofit-columns) instead.
 * The obsolete `AutoFitColumns()` method is removed. Use `AutoFitColumnsAsync()` instead.
 * The obsolete `AutoFitAllColumns()` method is removed. Use `AutoFitAllColumnsAsync()` instead.
@@ -50,7 +50,7 @@ The obsolete `ClearButton` parameter is removed. Use `ShowClearButton` instead.
 
 ## TreeList
 
-* Columns with `Visible="false"` are editable by default in popup edit mode. To avoid this, [set `Editable="false"` together with `Visible="false"`]({%slug treelist-editing-popup%}).
+* Columns with `Visible="false"` are editable by default in popup edit mode. To disable editing of a hidden column, [set `Editable="false"` together with `Visible="false"`]({%slug treelist-editing-popup%}).
 * The obsolete `AutoFitColumn()` method is removed. [Use `AutoFitColumnAsync()`]({%slug treelist-columns-resize%}#autofit-columns) instead.
 * The obsolete `AutoFitColumns()` method is removed. Use `AutoFitColumnsAsync()` instead.
 * The obsolete `AutoFitAllColumns()` method is removed. Use `AutoFitAllColumnsAsync()` instead.
