docs(common): Document breaking changes in version 7.0.0 (#2458)
* docs(common): Document breaking changes in version 7

* doc(common): Breaking changes in v7 continued

* Mention .NET 7 support

* Fix slugs

* Update components/gantt/dependencies/editing.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

* Update components/gantt/dependencies/overview.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

* Update components/gantt/dependencies/overview.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

* Update components/gantt/dependencies/overview.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

* Update components/gantt/dependencies/overview.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

* Update components/textarea/overview.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

* Update knowledge-base/radiogroup-like-buttongroup.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

* Update knowledge-base/textarea-autosize-max-height.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

* Update upgrade/breaking-changes/7-0-0.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

* Update upgrade/breaking-changes/7-0-0.md

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

* reword hidden columns editability

* reword

---------

Co-authored-by: Iva Stefanova Koevska-Atanasova <koevska@progress.com>

--- a/upgrade/rendering-changes/7-0-0.md
+++ b/upgrade/rendering-changes/7-0-0.md
@@ -2,7 +2,7 @@
 title: 7.0.0
 description: Handle the rendering changes in the 7.0.0 release of the Telerik UI for Blazor components.
 page_title: Rendering Changes in the 7.0.0 Release
-slug: changes-in-7-0-0
+slug: rendering-changes-in-7-0-0
 position: 970
 ---
 
@@ -11,6 +11,7 @@ position: 970
 * [AIPrompt](#aiprompt)
 * [Gantt](#gantt)
 * [Menu](#menu)
+* [PanelBar](#panelbar)
 * [PDFViewer](#pdfviewer)
 * [Signature](#signature)
 * [TabStrip](#tabstrip)
@@ -35,6 +36,10 @@ position: 970
 
 1. The menu item elements (`<span class="k-link">`) no longer include the `k-in` class.
 2. The `<ul class="k-menu-group">` element no longer includes the `k-reset` and `k-group` classes.
+
+## PanelBar
+
+The `id` attribute of each PanelBar item (`<li class="k-panelbar-item">`) is changed from `tree-item-A_B_C_...` to `tree-item-Z`, where `A`, `B`, and `C` were the parent item's indexes, and `Z` is the current item's index within its own group and hierarchy level.
 
 ## PDFViewer
 
@@ -62,3 +67,4 @@ The `Open`, `Download` and `Print` tools have been moved to a submenu toggled on
 ## See Also
 
 * [Use best practices when overriding theme styles]({%slug themes-override%}#best-practices)
+* [Breaking changes in Telerik UI for Blazor 7.0.0]({%slug changes-in-7-0-0%})
