chore(common): fix links

--- a/upgrade/breaking-changes/3-0-0.md
+++ b/upgrade/breaking-changes/3-0-0.md
@@ -499,7 +499,7 @@ We are making our API naming more consistent.
 
 ## Rendering and Themes
 
->important The [HTML rendering and CSS classes have been updated for multiple components](https://www.telerik.com/blogs/improvements-coming-telerik-kendo-ui-themes-2022), including Buttons, Textbox components, Dropdown components, Date/Time Pickers, Checkbox, Switch. [Recreate any custom themes]({%slug themes-customize%}) via [import]({%slug themes-customize%}#import-custom-theme) or [from scratch]({%slug themes-customize%}#using-themebuilder).
+>important The [HTML rendering and CSS classes have been updated for multiple components](https://www.telerik.com/blogs/improvements-coming-telerik-kendo-ui-themes-2022), including Buttons, Textbox components, Dropdown components, Date/Time Pickers, Checkbox, Switch. [Recreate any custom themes]({%slug themes-customize%}). 
 
 ### CSS Classes for State
 
