chore(common): fix links

--- a/upgrade/rendering-changes/3-6-0.md
+++ b/upgrade/rendering-changes/3-6-0.md
@@ -15,7 +15,7 @@ position: 995
 * [Grid](#grid)
 * [Menu](#menu)
 * [Pager](#pager)
-* [PanelBar](#panelber)
+* [PanelBar](#panelbar)
 * [RadioGroup](#radiogroup)
 * [Scheduler](#scheduler)
 * [TabStrip](#tabstrip)
