--- a/upgrade/breaking-changes/2-0-0.md
+++ b/upgrade/breaking-changes/2-0-0.md
@@ -31,7 +31,7 @@ Until now, you had to include things like `@using Telerik.Blazor.Components.<Com
 
 As of the `2.0.0` version, you only need to add the following to your main **~/_Imports.razor** file, and you have to remove the `@using` statements per component:
 
-````
+````RAZOR
 @using Telerik.Blazor
 @using Telerik.Blazor.Components
 ````
@@ -147,7 +147,7 @@ This is a list of the components that had their child tags removed or renamed.
 * The `TelerikGridEvents` and `EventsManager` tags are removed. The CRUD events of the grid are now available at its root-level tag, for example `<TelerikGrid OnRead=@ReadItems>`.
 * All child tags that had `Telerik` as a prefix do not have that prefix anymore.
 
-````
+````RAZOR
 // Old
 <TelerikGrid Data=@GridData>
     <TelerikGridColumns>
